--- a/json/tasks.json
+++ b/json/tasks.json
@@ -1,10 +1,10 @@
 [
   {
-    "taskName": "Create Contact Page",
-    "description": "Membuat halaman kontak dengan formulir pengisian.",
-    "creator": "Citra",
+    "taskName": "SDLC Waterfall",
+    "description": "Membuat Web tentang Metode SDLC Waterfall",
+    "creator": "Rizieq",
     "mapel": "PPL.",
-    "link": "https://smkkrian1.sch.id/"
+    "link": "https://kebsixx.github.io/SDLC-waterfall/"
   },
   {
     "taskName": "Create Contact Page",
